Fixed alignments in SiteView and ArtistView and added dummy data to matt's node

--- a/actionscript3/trunk/examples/navigation/embedded-assets/css/main.css
+++ b/actionscript3/trunk/examples/navigation/embedded-assets/css/main.css
@@ -18,7 +18,6 @@ Application
 	fontWeight:bold
 }
 
-
 LinkButton
 {
 	textSelectedColor:#FF3300;
@@ -94,4 +93,9 @@ LinkButton
 	overSkin: Embed("../images/thumbMenuArrowRight_over.png");
 	downSkin: Embed("../images/thumbMenuArrowRight_down.png");
 	disabledSkin: Embed("../images/thumbMenuArrowRight_disabled.png");
+}
+
+.footerCopyright
+{
+	fontWeight:bold;
 }
